--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.4",
     "axios": "^0.24.0",
+    "commit": "cz",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.7",
     "element-plus": "^1.2.0-beta.6",
@@ -42,7 +43,7 @@
     "husky": "^7.0.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
-    "prettier": "^2.2.1",
+    "prettier": "^2.5.1",
     "typescript": "~4.1.5",
     "unplugin-auto-import": "^0.5.5",
     "unplugin-vue-components": "^0.17.11"
